# ComposeProject

./: README.md  gradle.properties  settings.gradle
Components/Pay/Alipay/: build.gradle  proguard-rules.pro
Components/Pay/GPay/: build.gradle  proguard-rules.pro
Components/Pay/WeChat/: build.gradle  proguard-rules.pro
Components/Sharer/Share/: build.gradle
ImageNativeLib/: README.md  build.gradle
ImageNativeLib/src/main/cpp/: CMakeLists.txt  native_image_lib.cpp  objrem_pre_post_processing.cpp  objrem_pre_post_processing.h  opencv_utils.cpp  opencv_utils.h  scrfdncnn.cpp
Libs/Base/: build.gradle
Libs/FlowBus/: build.gradle
Libs/NetWork/CompanyLibs/: build.gradle  proguard-rules.pro
Libs/NetWork/SunnyLibs/: build.gradle
Libs/Utils/File/: build.gradle
Libs/Utils/MediaPicker/: build.gradle
Libs/Utils/MediaPicker/src/main/: AndroidManifest.xml
Libs/Utils/Permission/: build.gradle
Libs/VideoEditing/: build.gradle  proguard-rules.pro
Property/: android.gradle
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: dialog_btn_bg_1.xml  selector_dialog_them_bg.xml  svg_back.xml  svg_back_black.xml  svg_back_with_bg.xml  svg_icon_add.xml  svg_icon_close.xml  svg_icon_close_gift.xml  svg_icon_close_white.xml  svg_icon_close_white_32.xml  svg_icon_delete_red.xml  svg_icon_down.xml  svg_icon_error.xml  svg_icon_hint.xml  svg_icon_next.xml  svg_icon_next_black.xml  svg_icon_next_black40.xml  svg_icon_next_grey.xml  svg_icon_pro.xml  (+17 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+311 files in other folders)
